vpc.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
  default_tags {
  }
  
}#VPC
resource "aws_vpc" "redteam" {
    cidr_block = "10.0.0.0/16"
    tags = {
        Name = "redteam"
    }
}

#public subnet
resource "aws_subnet" "PublicSubnet"{
    vpc_id = aws_vpc.redteam.id
    availability_zone = "us-east-1a"
    cidr_block = "10.0.1.0/24"
}

#private subnet
resource "aws_subnet" "PrivateSubnet"{
    vpc_id = aws_vpc.redteam.id
    cidr_block = "10.0.2.0/24"
    map_public_ip_on_launch = true
}

#create IGW
resource "aws_internet_gateway" "myIgw"{
    vpc_id = aws_vpc.redteam.id
}

#route Tables for public subnet
resource "aws_route_table" "PublicRT"{
    vpc_id = aws_vpc.redteam.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.myIgw.id
    }
}
 
#route table association public subnet 
resource "aws_route_table_association" "PublicRTAssociation"{
    subnet_id = aws_subnet.PublicSubnet.id
    route_table_id = aws_route_table.PublicRT.id
}
